add code snippet for selecting one from each cluster

--- a/notebooks/cluster.ipynb
+++ b/notebooks/cluster.ipynb
@@ -110,10 +110,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(p_top_1k.with_suffix(\".filtered.clustered.csv\"), \"w\") as f:\n",
+    "with open(p_top_1k.with_suffix(\".clustered.csv\"), \"w\") as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerow([\"smiles\", \"cluster\"])\n",
     "    writer.writerows(sorted(zip(smis, labels_kmeans), key=lambda xy: xy[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['O=C(c1ccc(F)cc1)N1CCN(Cc2nc3sc4c(c3c(=O)[nH]2)CCCC4)CC1',\n",
+       " 'O=C(Nc1nc(-c2cc(F)ccc2F)cs1)c1ccccc1Oc1ccccc1',\n",
+       " 'O=C(NCc1ccc(NC(=O)C2CC2)cc1)C1CCN(C(=O)c2cccc3ccccc23)CC1',\n",
+       " 'Fc1ccc(-c2nnc(Oc3ccc(Oc4ccccc4)cc3)c3ccccc23)cc1',\n",
+       " 'O=C(Cc1cn(-c2ccccc2)nc1-c1ccc(Cl)cc1)Nc1ccc2c(c1)NC(=O)CO2',\n",
+       " 'O=C(O)c1cc(-c2ccc(-c3ccc(F)cc3)o2)nc2cc3c(cc12)OCCO3',\n",
+       " 'CC1(c2ccc3ccccc3c2)NC(=O)N(CC(=O)N(Cc2ccccc2)Cc2ccccc2)C1=O',\n",
+       " 'O=S(=O)(C1=Cc2ccccc2CC1)N1CCN(S(=O)(=O)C2=Cc3ccccc3CC2)CC1',\n",
+       " 'Cc1ccc(N2C(=O)C(=CNc3ccc4c(c3)C(=O)c3ccccc3C4=O)c3ccccc3C2=O)c(C)c1',\n",
+       " 'O=C(CCc1nc2c(cnn2-c2ccccc2)c(=O)[nH]1)N1CCCC1c1ccc2c(c1)OCCCO2',\n",
+       " 'O=C1OC(c2ccccc2)Cc2cc(C(=O)N3CCCSc4ccccc43)ccc21',\n",
+       " 'O=C(NCc1ccc(C(=O)N2CCOCC2)cc1)c1cc(-c2ccc(F)cc2)nc2ccccc12',\n",
+       " 'O=C(Cn1c(=O)oc2cc(Cl)ccc21)N1c2ccccc2OCC1c1ccccc1',\n",
+       " 'O=C(Nc1ccc2c(c1)CCC2)c1cccc(S(=O)(=O)Nc2ccccc2-c2ccccc2)c1',\n",
+       " 'Cc1cccc(NC(=O)c2cc(-c3ccc(F)cc3)nc3ccccc23)n1',\n",
+       " 'O=C(c1oc2ccccc2c1-c1cnn(-c2ccccc2)c1)N1CCc2ccccc21',\n",
+       " 'O=C(Cn1c2ccccc2c(=O)c2ccccc21)NC(c1ccccc1)c1cc2ccccc2o1',\n",
+       " 'O=C(Nc1nc2c(s1)CCCC2)c1nn(Cc2ccccc2)c(=O)c2ccccc12',\n",
+       " 'Cc1ccc(C2(c3ccccc3)NC(=O)N(CC(=O)Nc3ccccc3-c3ccccc3)C2=O)cc1C']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"../data/2_molpal/6p9l_hts_results/smis-top1k.filtered.clustered.csv\") as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    next(reader)\n",
+    "    smis, labels = zip(*reader)\n",
+    "\n",
+    "labels = np.array(list(map(int, labels)))\n",
+    "idxs = np.arange(len(labels))\n",
+    "N = labels.max()\n",
+    "\n",
+    "idxs = [np.random.choice(idxs[labels == i], 1) for i in range(N)]\n",
+    "idxs = np.concatenate(idxs)\n",
+    "\n",
+    "selected = [smis[i] for i in idxs]\n",
+    "selected"
    ]
   },
   {
